# full_page_text_history_search_rust

./: .gitignore  Cargo.toml  evaluate_script.js
src/: lib.rs  main.rs
src/browser_operations/: connect_to_browser.rs  get_ws_url.rs  mod.rs  page_operations.rs
src/index_management/: entry_builder.rs  mod.rs
