[package]
name = "full_page_text_history_search"
version = "0.1.0"
authors = ["Jeffrey Brusseau <bobajeff82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
# Use my experimental branch of chromiumoxide
chromiumoxide = { path = "custom_deps/chromiumoxide" }
reqwest = {version = "0.11.0", features = ["json"]}
tokio = {version = "1.1.0", features = ["full"]}
