[package]
name = "full_page_text_history_search"
version = "0.1.0"
authors = ["Jeffrey Brusseau <bobajeff82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
# Use my experimental branch of chromiumoxide
chromiumoxide = { path = "custom_deps/chromiumoxide" }
chromiumoxide_cdp = { path = "custom_deps/chromiumoxide/chromiumoxide_cdp" }
chrono = "0.4.19"
futures = "0.3.12"
reqwest = {version = "0.11.0", features = ["json"]}
serde_json = "1.0.61"
tantivy = "0.13.3"
tokio = {version = "1.1.0", features = ["full"]}
